--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<body>
 		<div id="mainmap">
 			<div class="legend">
-					<b>Housing New York Affordable Buildings</b> 
+					<b>Housing New York Projects</b> 
 					<hr> 
-					<em> How many units can the typical neighborhood <br> household afford in this building?</em>
+					<div style="margin-bottom: 5px;"><em>How many units can a typical<br> neighborhood household<br> afford in this building?</em></div>
 		        <div>
 		            <span class="i" style="background:#d73027"></span>
 		            <label class="legend-label"> none </label>
