--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
 	<body>
 		<div id="mainmap">
 			<div class="legend">
-					<b>Housing New York Projects</b> 
-					<hr> 
-					<div style="margin-bottom: 5px;"><em>How many units can a typical<br> neighborhood household<br> afford in this building?</em></div>
+				<b>Buildings with Affordable Units</b><br> 
+				<div style="padding-left:36px; padding-bottom: 5px; padding-top: 5px;">
+	            	<span class="i-xs"></span><span class="i-s"></span><span class="i-m"></span><span class="i-l"></span>
+	       		</div>
+		       	<span style="padding-left:10px;"> fewer units &emsp; &emsp; more units </span>
+				<hr> 
+					<div style="margin-bottom: 5px;"><em>Which units in this building<br> could a typical neighborhood<br> household afford?</em></div>
 		        <div>
 		            <span class="i" style="background:#d73027"></span>
 		            <label class="legend-label"> none </label>
