updated fonts and made legend compact

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 	<body>
 		<div id="mainmap">
 			<div class="legend">
-				<b>Buildings with Affordable Units</b><br> 
-				<div style="padding-left:36px; padding-bottom: 5px; padding-top: 5px;">
-	            	<span class="i-xs"></span><span class="i-s"></span><span class="i-m"></span><span class="i-l"></span>
+				<b>Buildings with <br> Affordable Units</b><br> 
+				<div style="padding-left:10px; padding-bottom: 5px; padding-top: 7px;">
+	            	<span class="cir xs"></span><span class="cir s"></span><span class="cir m"></span><span class="cir l"></span>
 	       		</div>
-		       	<span style="padding-left:10px;"> fewer units &emsp; &emsp; more units </span>
+		       	<span style="padding-left:0px;"> fewer &emsp; &emsp; &emsp; &emsp; more </span>
 				<hr> 
-					<div style="margin-bottom: 5px;"><em>Which units in this building<br> could a typical neighborhood<br> household afford?</em></div>
+					<div style="margin-bottom: 5px;line-height:1.25"><em>Which units are <br>locally affordable?</em></div>
 		        <div>
 		            <span class="i" style="background:#d73027"></span>
 		            <label class="legend-label"> none </label>
 		        </div>
 		        <div>
 		        	<span class="i" style="background:#fc8d59"></span>
-		            <label class="legend-label"> some, less than half </label>
+		            <label class="legend-label">less than half</label>
 		        </div>
 		        <div>
 		        	<span class="i" style="background:#fee08b"></span>
-		            <label class="legend-label"> most, more than half</label>
+		            <label class="legend-label">more than half</label>
 		        </div>
 		        <div>
 		        	<span class="i" style="background:#66bd63"></span>
