legend toggle on popup for mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		<div id="mainmap">
-			<div class="legend">
+			<div id="legend">
 				<b>Buildings with <br> Affordable Units</b><br> 
 				<div style="padding-left:10px; padding-bottom: 5px; padding-top: 7px;">
 	            	<span class="cir xs"></span><span class="cir s"></span><span class="cir m"></span><span class="cir l"></span>
