fixed legend & control overlap on mobile

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 	<head>
 		<title>Housing New York Affordability Map</title>
 
-		<link rel="icon" type="image/png" href="images/favicon.png">
-
 		<meta charset="UTF-8">
 		<meta name="description" content="This interactive map shows how affordable each Housing New York property is to a median-income local resident. Data comes from NYC Open Data.">
 		<meta name="keywords" content="Interactive,Map,Land,Sale,Housing,New,York,Affordable,Developer">
@@ -30,12 +28,12 @@
 		<div id="mainmap">
 			<div id="legend">
 				<b>Buildings with <br> Affordable Units</b><br> 
-				<div style="padding-left:10px; padding-bottom: 5px; padding-top: 7px;">
+				<div class="legend-size-circles">
 	            	<span class="cir xs"></span><span class="cir s"></span><span class="cir m"></span><span class="cir l"></span>
 	       		</div>
 		       	<span style="padding-left:0px;"> fewer &emsp; &emsp; &emsp; &emsp; more </span>
 				<hr> 
-					<div style="margin-bottom: 5px;line-height:1.25"><em>Which units are <br>locally affordable?</em></div>
+					<div style="margin-bottom: 5px;line-height:1.25">How many units<br>can <em>locals</em> afford?</div>
 		        <div>
 		            <span class="i" style="background:#d73027"></span>
 		            <label class="legend-label"> none </label>
