--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	   integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
 	   crossorigin=""></script>
 
-	   	<!-- Geocoder Plugin--> 
+	   	<!-- Geocoder Plugin (Copywright details included in repository) --> 
 		<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
 		<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
 
 		
 	</head>
