updated data/app to include family size

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     	</div>
 			<!-- SCRIPT --> 
 			<script type="text/javascript" src="js/HNYdata.js"></script>
-			<script type="text/javascript" src="js/NYboundaries.js"></script>		
+			<script type="text/javascript" src="js/commDistricts.js"></script>		
 			<script type="text/javascript" src="js/map.js"></script>
 	</body>
 </html>
