--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 	   integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
 	   crossorigin=""></script>
 
-	   	<!-- Geocoder Plugin (Copywright details included in repository) --> 
-		<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-		<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>		
+	   	<!-- Esri Geocoder Plugin--> 
+    	<script src="https://unpkg.com/esri-leaflet@2.1.3"></script>
+    	<link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
+    	<script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>
+    	
 	</head>
 	<body>
 		<div id="mainmap">
