--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="This interactive map shows how affordable each Housing New York property is to a median-income local resident. Data comes from NYC Open Data.">
 		<meta name="keywords" content="Interactive,Map,Land,Sale,Housing,New,York,Affordable,Developer">
 		<meta name="author" content="Sam Raby">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/style.css"/>
 	    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
